# src/api/v1/index.ts
@@ -1,13 +1,13 @@
 import { Router } from 'express';
+import products from '@eucossa-web2-product-service-features/Products';
 import testRoute from './testRoute';
-import todosDomain from '@eucossa-web2-product-service-features/Todo';
 import { swaggerServe, swaggerSetup } from '@eucossa-web2-product-service-utils/docs';
 
 export default function () {
 	const apiRoute = Router();
 	apiRoute.get('/test', testRoute);
+	products({ app: apiRoute, pathName: '/products' });
 	apiRoute.use('/docs', swaggerServe, swaggerSetup);
-	todosDomain({ app: apiRoute, pathName: '/todos' });
 
 	return apiRoute;
 }
